Improve some details on my website. They were based on feedback from an awesome colleague I had the pleasure working with.

--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -1,6 +1,5 @@
 {
   "current.language": "en",
-  "website.welcome.message": "Finally, you're here",
   "website.introduction.message": "I am Dieter Jordens. This is my online portfolio. Feel free to take a look around! My website is still a work in progress, so be sure to come back in a while.",
   "website.details.message": "I'm {{age}} years old and live in Geetbets, Belgium. This is in a close proximity of Leuven, Brussels and Hasselt. I'm passionate about full stack agile software development and artificial intelligence.",
   "website.learn.more.about.my.vision": "My vision",
@@ -14,21 +13,21 @@
   "website.certificates": "Certificates",
   "my.vision.what.to.expect.of.me": "What can you expect of me?",
   "my.vision.what.is.my.vision": "I see Software Development as a craft!",
-  "my.vision.what.is.my.mission": "As a Software Craftsman I try to raise the bar for professional software development by practicing it and helping others to learn the craft. I try to apply the values in the Manifesto for Software Craftsmanship in my daily work.",
+  "my.vision.what.is.my.mission": "As Software Craftsman I raise the bar of professional software development by putting it into practice. In addition, I help others to learn the craft. I apply the values from the Software Craftsmanship Manifesto in my daily work.",
   "my.vision.well.crafted.software.title": "Well-crafted software",
   "my.vision.well.crafted.software.part1": "My mission is to deliver high quality software. I am humble about my expertise and honest about my capabilities.",
-  "my.vision.well.crafted.software.part2": "I try to be an expert in what I do and to master the technologies and techniques I need to perform my job.",
-  "my.vision.well.crafted.software.part3": "I take full responsibility for the correctness of the code we write in our team. I do not tolerate preventable defects. I have an eye for detail in code reviews and try to test our code thoroughly.",
+  "my.vision.well.crafted.software.part2": "I strive to become a master of what I do and to master the technologies and techniques I need to perform my work.",
+  "my.vision.well.crafted.software.part3": "I take full responsibility for the correctness of the code we write in our team. I don't tolerate avoidable bugs. I have an eye for detail in code reviews and test our code thoroughly with a strong preference for test-driven development.",
   "my.vision.steadily.adding.value.title": "Steadily adding value",
   "my.vision.steadily.adding.value.part1": "I make estimations with diligence. I'm not easily influenced by pressure or fear. I make sure I understand everything what is needed to deliver before giving an estimation.",
   "my.vision.steadily.adding.value.part2": "I strive to give my best effort at a sustainable pace.",
   "my.vision.community.of.professionals.title": "A community of professionals",
   "my.vision.community.of.professionals.part1": "I embrace different opinions and personalities. I don't let the current way of working impede improvements.",
-  "my.vision.community.of.professionals.part2": "I am willing to share my knowledge with anyone who is willing to learn. I share my good practices, knowledge and try to learn from everyone myself.",
+  "my.vision.community.of.professionals.part2": "I am willing to share my knowledge with anyone who has the willingness to learn. I share my good practices, knowledge and learn from others.",
   "my.vision.productive.partnerships.title": "Productive partnerships",
-  "my.vision.productive.partnerships.part1": "I show respect for the customer and fellow software crafters. I try to behave professionally and ethical every day.",
+  "my.vision.productive.partnerships.part1": "I show respect for the customer and fellow software makers. I behave professionally and ethically.",
   "my.vision.productive.partnerships.part2": "I'm open and honest to the customer. I do not conceal or embellish.",
-  "my.vision.productive.partnerships.part3": "I always try to find myself in the interests of the customer in order to build a long-term relationship.",
+  "my.vision.productive.partnerships.part3": "I think of the client's interest in building a long-term relationship.",
   "cv.image": "Curriculum Vitae image",
   "cv.current.role": "Java Software Craftsman",
   "cv.about": "Dieter is a passionate agile software developer and proudly bears the title of Civil Engineer. On his current project, Dieter works on an application for the Federal Public Service Justice.",
@@ -36,13 +35,13 @@
   "cv.receive": "Receive full resume",
   "cv.expertise": "Expertise",
   "cv.back-end": "Back-end",
-  "cv.back-end.detail": "Experience mainly with Spring, Java and other related frameworks.",
+  "cv.back-end.detail": "Experience mainly with Spring, Java and other related frameworks. In his spare time Dieter is also a huge fan of Python which he also uses in some of his pet projects.",
   "cv.front-end": "Front-end",
-  "cv.front-end.detail": "Dieter prefers modern frameworks such as Angular that allow to build quality software, but Dieter also has experience with other technologies.",
+  "cv.front-end.detail": "Preference is given to modern frameworks (e.g. Angular). These make it possible to write future proof code in line with state-of-the-art best practices.",
   "cv.quality-management": "Quality management",
-  "cv.quality-management.detail": "Delivering quality is a priority, which is why Dieter attaches great importance to unit, integration and e2e tests.",
+  "cv.quality-management.detail": "Dieter writes test-driven quality code. Besides that he also does code reviews, retrospectives and invests a lot of time in active knowledge sharing.",
   "cv.data-technologies": "Data technologies",
-  "cv.data-technologies.detail": "Dieter has working experience with SQL (e.g. IBM DB2, MySQL) and NoSQL (e.g. CouchDB).",
+  "cv.data-technologies.detail": "Dieter has work experience with both SQL and NoSQL. Storing the right data is more important than ever, Dieter understands that all too well with his background in AI.",
   "cv.work.experience": "Work experience",
   "cv.work.experience1.date": "2016 - present",
   "cv.work.experience1.title": "Java Software Craftsman",
