--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -1,6 +1,5 @@
 {
   "current.language": "fr",
-  "website.welcome.message": "Enfin, vous êtes là",
   "website.introduction.message": "Je suis Dieter Jordens. Voici mon portfolio en ligne. N'hésitez pas à jeter un coup d'oeil! Mon site web sera plus complet à l'avenir, alors revenez nous voir dans un moment.",
   "website.details.message": "J'ai {{age}} ans et j'habite actuellement à Geetbets, en Belgique. C'est à proximité de Louvain, Bruxelles et Hasselt. Je suis passionné par le le développement de logiciels agiles (full-stack) et l'intelligence artificielle.",
   "website.learn.more.about.my.vision": "Ma vision",
@@ -14,21 +13,21 @@
   "website.certificates": "Certificats",
   "my.vision.what.to.expect.of.me": "Que pouvez-vous attendre de moi?",
   "my.vision.what.is.my.vision": "Le développement de logiciels est un métier!",
-  "my.vision.what.is.my.mission": "En tant qu'artisan de logiciels, j'essaie d'élever la barre du développement de logiciels professionnels en le pratiquant et en aidant les autres à apprendre le métier. J'essaie d'appliquer les valeurs du Manifeste de l'artisanat logiciel dans mon travail quotidien.",
+  "my.vision.what.is.my.mission": "En tant qu'artisan du logiciel, j'élève la barre du développement professionnel de logiciels en le mettant en pratique. En outre, j'aide les autres à apprendre le métier. J'applique les valeurs du Manifeste de l'artisanat du logiciel dans mon travail quotidien.",
   "my.vision.well.crafted.software.title": "Logiciel bien conçu",
   "my.vision.well.crafted.software.part1": "Ma mission est de fournir des logiciels de haute qualité. Je suis humble quant à mon expertise et honnête quant à mes capacités.",
-  "my.vision.well.crafted.software.part2": "J'essaie d'être un expert dans ce que je fais et de maîtriser les technologies et les techniques dont j'ai besoin pour faire mon travail.",
-  "my.vision.well.crafted.software.part3": "J'assume l'entière responsabilité de l'exactitude du code que nous rédigeons dans notre équipe. Je ne tolère pas les défauts évitables. J'ai un oeil pour les détails dans les revues de code et j'essaie de tester notre code à fond.",
+  "my.vision.well.crafted.software.part2": "Je m'efforce de devenir un maître de ce que je fais et de maîtriser les technologies et les techniques dont j'ai besoin pour effectuer mon travail.",
+  "my.vision.well.crafted.software.part3": "J'assume l'entière responsabilité de l'exactitude du code que nous écrivons dans notre équipe. Je ne tolère pas les bugs évitables. J'ai l'œil pour les détails dans les révisions de code et je teste notre code de manière approfondie avec une forte préférence pour le développement piloté par les tests.",
   "my.vision.steadily.adding.value.title": "Une valeur ajoutée constante",
   "my.vision.steadily.adding.value.part1": "Je fais des estimations avec diligence. Je ne suis pas facilement influencée par la pression ou la peur. Je m'assure de bien comprendre tout ce qui est nécessaire pour livrer avant de donner un devis.",
   "my.vision.steadily.adding.value.part2": "Je m'efforce de donner le meilleur de moi-même à un rythme durable.",
   "my.vision.community.of.professionals.title": "Une communauté de professionnels",
   "my.vision.community.of.professionals.part1": "J'embrasse différentes opinions et personnalités. Je ne laisse pas la façon actuelle de travailler entraver les améliorations.",
-  "my.vision.community.of.professionals.part2": "Je suis prêt à partager mes connaissances avec toute personne désireuse d'apprendre. Je partage mes bonnes pratiques, mes connaissances et j'essaie d'apprendre de tout le monde moi-même.",
+  "my.vision.community.of.professionals.part2": "Je suis prêt à partager mes connaissances avec tous ceux qui ont la volonté d'apprendre. Je partage mes bonnes pratiques, mes connaissances et j'apprends des autres.",
   "my.vision.productive.partnerships.title": "Partenariats productifs",
-  "my.vision.productive.partnerships.part1": "J'ai du respect pour le client et les autres concepteurs de logiciels. J'essaie de me comporter de façon professionnelle et éthique tous les jours.",
+  "my.vision.productive.partnerships.part1": "Je fais preuve de respect pour le client et les autres fabricants de logiciels. Je me comporte de manière professionnelle et éthique.",
   "my.vision.productive.partnerships.part2": "Je suis ouvert et honnête avec le client. Je ne cache ni n'embellis.",
-  "my.vision.productive.partnerships.part3": "J'essaie toujours de me trouver dans l'intérêt du client afin de construire une relation à long terme.",
+  "my.vision.productive.partnerships.part3": "Je pense à l'intérêt du client à construire une relation à long terme.",
   "cv.image": "Curriculum Vitae image",
   "cv.current.role": "Java Software Craftsman",
   "cv.about": "Dieter est un développeur de logiciels agile passionné et porte fièrement le titre d'ingénieur civil. Dans le cadre de son projet actuel, Dieter travaille sur une candidature pour le Service public fédéral Justice.",
@@ -36,13 +35,13 @@
   "cv.receive": "Recevoir le CV complet",
   "cv.expertise": "Expertise",
   "cv.back-end": "Back-end",
-  "cv.back-end.detail": "Expérience principalement avec Spring, Java et d'autres frameworks connexes.",
+  "cv.back-end.detail": "Expérience principalement avec Spring, Java et d'autres frameworks connexes. Pendant son temps libre, Dieter est aussi un grand fan de Python, qu'il utilise également dans certains de ses projets favoris.",
   "cv.front-end": "Front-end",
-  "cv.front-end.detail": "La préférence va aux cadres modernes comme Angular, mais Dieter a aussi de l'expérience avec des technologies plus anciennes.",
+  "cv.front-end.detail": "La préférence va aux cadres modernes comme Angular. Ceux-ci permettent d'écrire un code prospectif conforme aux meilleures pratiques de pointe.",
   "cv.quality-management": "Gestion de la qualité",
-  "cv.quality-management.detail": "La qualité est une priorité, c'est pourquoi Dieter attache une grande importance aux tests unitaires, d'intégration et e2e.",
+  "cv.quality-management.detail": "Dieter écrit du code à l'aide de tests, dans un souci de lisibilité. Il fait également des revues de code, des rétrospectives et investit beaucoup de temps dans le partage actif des connaissances.",
   "cv.data-technologies": "Technologies de données",
-  "cv.data-technologies.detail": "Dieter a expérience avec SQL (e.g. IBM DB2, MySQL) et NoSQL (e.g. CouchDB).",
+  "cv.data-technologies.detail": "Dieter a une expérience professionnelle avec SQL et NoSQL. Le stockage des bonnes données est plus important que jamais, Dieter le comprend trop bien avec son expérience en IA.",
   "cv.work.experience": "Expérience de travail",
   "cv.work.experience1.date": "2016 à ce jour",
   "cv.work.experience1.title": "Java Software Craftsman",
