--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -1,6 +1,5 @@
 {
   "current.language": "nl",
-  "website.welcome.message": "Eindelijk ben je hier",
   "website.introduction.message": "Ik ben Dieter Jordens. Dit is mijn online portfolio. Kijk gerust eens rond! Mijn website wordt uitgebreider in de toekomst, dus kom over een tijdje zeker eens terug.",
   "website.details.message": "Ik ben {{age}} jaar oud en woon momenteel in Geetbets, België. Dit is in de nabijheid van Leuven, Brussel en Hasselt. Ik ben gepassioneerd door full-stack agile software ontwikkeling en artificiële intelligentie.",
   "website.learn.more.about.my.vision": "Mijn visie",
@@ -14,21 +13,21 @@
   "website.certificates": "Certificaten",
   "my.vision.what.to.expect.of.me": "Wat kun je van mij verwachten?",
   "my.vision.what.is.my.vision": "Software ontwikkeling is een ambacht!",
-  "my.vision.what.is.my.mission": "Als Software Craftsman probeer ik de lat van professionele software ontwikkeling hoger te leggen door het in de praktijk te brengen en anderen te helpen om het vak te leren. Ik probeer de waarden uit het Software Craftsmanship Manifesto toe te passen in mijn dagelijks werk.",
+  "my.vision.what.is.my.mission": "Als Software Craftsman leg ik de lat van professionele software ontwikkeling hoger door het in de praktijk te brengen. Daarnaast help ik anderen om het vak te leren. Ik pas de waarden uit het Software Craftsmanship Manifesto toe in mijn dagelijks werk.",
   "my.vision.well.crafted.software.title": "Goed ontworpen software",
   "my.vision.well.crafted.software.part1": "Mijn missie is het afleveren van hoogwaardige software. Ik ben nederig over mijn expertise en eerlijk over mijn capaciteiten.",
-  "my.vision.well.crafted.software.part2": "Ik probeer een expert te zijn in wat ik doe en de technologieën en technieken te beheersen die ik nodig heb om mijn werk uit te voeren.",
-  "my.vision.well.crafted.software.part3": "Ik neem de volledige verantwoordelijkheid voor de correctheid van de code die we in ons team schrijven. Ik tolereer geen vermijdbare bugs. Ik heb oog voor detail in code reviews en probeer onze code grondig te testen.",
+  "my.vision.well.crafted.software.part2": "Ik streef ernaar om een meester te worden in wat ik doe en de technologieën en technieken te beheersen die ik nodig heb om mijn werk uit te voeren.",
+  "my.vision.well.crafted.software.part3": "Ik neem de volledige verantwoordelijkheid voor de correctheid van de code die we in ons team schrijven. Ik tolereer geen vermijdbare bugs. Ik heb oog voor detail in code reviews en test onze code grondig met een sterke voorkeur voor test-driven development.",
   "my.vision.steadily.adding.value.title": "Geleidelijk waarde toevoegen",
   "my.vision.steadily.adding.value.part1": "Ik maak met toewijding schattingen. Ik word niet gemakkelijk beïnvloed door druk of angst. Ik zorg ervoor dat ik alles begrijp wat er nodig is om een schatting te maken voordat ik deze geef.",
   "my.vision.steadily.adding.value.part2": "Ik streef ernaar om mijn uiterste best te doen op een vol te houden tempo.",
   "my.vision.community.of.professionals.title": "Een gemeenschap van professionals",
   "my.vision.community.of.professionals.part1": "Ik omarm verschillende meningen en persoonlijkheden. Ik laat de huidige manier van werken verbeteringen niet in de weg staan.",
-  "my.vision.community.of.professionals.part2": "Ik ben bereid om mijn kennis te delen met iedereen die de bereidheid heeft om te leren. Ik deel mijn good practices, kennis en probeer zelf van iedereen te leren.",
+  "my.vision.community.of.professionals.part2": "Ik ben bereid om mijn kennis te delen met iedereen die de bereidheid heeft om te leren. Ik deel mijn good practices, kennis en leer van anderen.",
   "my.vision.productive.partnerships.title": "Productieve partnerschappen",
-  "my.vision.productive.partnerships.part1": "Ik toon respect voor de klant en collega-softwaremakers. Ik probeer me elke dag professioneel en ethisch te gedragen.",
+  "my.vision.productive.partnerships.part1": "Ik toon respect voor de klant en collega-softwaremakers. Ik gedraag me professioneel en ethisch.",
   "my.vision.productive.partnerships.part2": "Ik ben open en eerlijk naar de klant toe. Ik verberg noch verfraai niet.",
-  "my.vision.productive.partnerships.part3": "Ik probeer me altijd in het belang van de klant te vinden om een langdurige relatie op te bouwen.",
+  "my.vision.productive.partnerships.part3": "Ik denk aan het belang van de klant om zo een langdurige relatie op te bouwen.",
   "cv.image": "Curriculum Vitae afbeelding",
   "cv.current.role": "Java Software Craftsman",
   "cv.about": "Dieter is een gepassioneerd agile software- ontwikkelaar en draagt met trots de titel van Burgerlijk Ingenieur. Op zijn huidig project werkt Dieter aan een applicatie voor de federale overheidsdienst Justitie.",
@@ -36,13 +35,13 @@
   "cv.receive": "Ontvang het volledige CV",
   "cv.expertise": "Expertise",
   "cv.back-end": "Back-end",
-  "cv.back-end.detail": "Ervaring voornamelijk rond Spring, Java en andere gerelateerde frameworks.",
+  "cv.back-end.detail": "Ervaring voornamelijk rond Spring, Java en andere gerelateerde frameworks. In zijn vrije tijd is Dieter ook een grote fan van Python, dat hij ook gebruikt in sommige van zijn hobby projectjes.",
   "cv.front-end": "Front-end",
-  "cv.front-end.detail": "De voorkeur gaat uit naar moderne frameworks zoals Angular, maar Dieter heeft ook ervaring met oudere technologieën.",
+  "cv.front-end.detail": "De voorkeur gaat uit naar moderne frameworks (e.g. Angular). Deze laten toe om toekomstgerichte code te schrijven die in lijn ligt met state-of-the-art best practices.",
   "cv.quality-management": "Kwaliteitsbeheer",
-  "cv.quality-management.detail": "Het opleveren van kwaliteit is prioritair, daarom vindt Dieter unit, integratie en e2e tests erg belangrijk.",
+  "cv.quality-management.detail": "Dieter schrijft test-driven code met oog voor leesbaarheid. Daarnaast doet hij ook code reviews, retrospectives en investeert hij veel tijd in actieve kennisdeling.",
   "cv.data-technologies": "Datatechnologieën",
-  "cv.data-technologies.detail": "Dieter heeft werkervaring met SQL (bijv. IBM DB2, MySQL) en NoSQL (bijv. CouchDB).",
+  "cv.data-technologies.detail": "Dieter heeft werkervaring met zowel SQL als NoSQL. Het opslaan van de juiste data is meer dan ooit belangrijk, dat begrijpt Dieter maar al te goed met zijn achtergrond in AI.",
   "cv.work.experience": "Werkervaring",
   "cv.work.experience1.date": "2016 - heden",
   "cv.work.experience1.title": "Java Software Craftsman",
