--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -30,7 +30,7 @@
   "my.vision.productive.partnerships.part3": "Je pense à l'intérêt du client à construire une relation à long terme.",
   "cv.image": "Curriculum Vitae image",
   "cv.current.role": "Java Software Craftsman",
-  "cv.about": "Dieter est un développeur de logiciels agile passionné et porte fièrement le titre d'ingénieur civil. Dans le cadre de son projet actuel, Dieter travaille sur une candidature pour le Service public fédéral Justice.",
+  "cv.about": "Dieter est un développeur de logiciels agile passionné et porte fièrement le titre d'ingénieur civil. Dieter travaille comme consultant pour continuum consulting NV.",
   "cv.body": "Hi Dieter%0A%0AJ'aimerais%20avoir%20accès%20à%20votre%20CV%20personnel%20pour<remplir-la-raison>.%0AMeilleures%20salutations%0A%0A<remplir-le-nom>",
   "cv.receive": "Recevoir le CV complet",
   "cv.expertise": "Expertise",
