Rename to blogpost -> article

--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -8,7 +8,7 @@
   "website.vision": "Ma vision",
   "website.cv": "CV",
   "website.projects": "Projets",
-  "website.blogposts": "Blogposts",
+  "website.articles": "Articles",
   "website.books": "Livres",
   "website.certificates": "Certificats",
   "my.vision.what.to.expect.of.me": "Que pouvez-vous attendre de moi?",
@@ -62,9 +62,9 @@
   "books.search": "Recherche",
   "projects.title": "Projets",
   "projects.description": "Vous trouverez ici les projets que j'ai réalisés au cours de ma carrière de consultant. Les projets sont triés par date de début, la plus récente en premier.",
-  "blogpost.title": "Titre",
-  "blogpost.publicationDate": "Date de publication",
-  "blogpost.category": "Catégorie",
+  "article.title": "Titre",
+  "article.publicationDate": "Date de publication",
+  "article.category": "Catégorie",
   "certificate.name": "Nom",
   "certificate.issueDate": "Date d'émission",
   "certificate.organization": "L'organisation",
