--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -8,7 +8,7 @@
   "website.vision": "My vision",
   "website.cv": "CV",
   "website.projects": "Projects",
-  "website.blogposts": "Blogposts",
+  "website.articles": "Articles",
   "website.books": "Books",
   "website.certificates": "Certificates",
   "my.vision.what.to.expect.of.me": "What can you expect of me?",
@@ -62,9 +62,9 @@
   "books.search": "Search",
   "projects.title": "Projects",
   "projects.description": "Here you will find the projects I have done in my career as a consultant. The projects are sorted by start date, the most recent one first.",
-  "blogpost.title": "Title",
-  "blogpost.publicationDate": "Date of publication",
-  "blogpost.category": "Category",
+  "article.title": "Title",
+  "article.publicationDate": "Date of publication",
+  "article.category": "Category",
   "certificates.description": "Click here to see all the certificates that I have obtained during my career as a consultant.",
   "certificate.name": "Name",
   "certificate.issueDate": "Issue date",
