--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -8,7 +8,7 @@
   "website.vision": "Mijn visie",
   "website.cv": "Curriculum vitae",
   "website.projects": "Projecten",
-  "website.blogposts": "Blogposts",
+  "website.articles": "Articles",
   "website.books": "Boeken",
   "website.certificates": "Certificaten",
   "my.vision.what.to.expect.of.me": "Wat kun je van mij verwachten?",
@@ -62,9 +62,9 @@
   "books.search": "Zoek",
   "projects.title": "Projecten",
   "projects.description": "Hier vindt u de projecten die ik in mijn carrière als consultant heb gedaan. De projecten zijn gesorteerd op startdatum, het meest recente eerst.",
-  "blogpost.title": "Titel",
-  "blogpost.publicationDate": "Publicatiedatum",
-  "blogpost.category": "Categorie",
+  "article.title": "Titel",
+  "article.publicationDate": "Publicatiedatum",
+  "article.category": "Categorie",
   "certificate.name": "Naam",
   "certificate.issueDate": "Uitgiftedatum",
   "certificate.organization": "Organisatie",
