Add some improvements implemented yesterday.

--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -1,11 +1,20 @@
 {
   "current.language": "en",
-  "website.introduction.message": "I am Dieter Jordens. This is my online portfolio. Feel free to take a look around! My website is still a work in progress, so be sure to come back in a while.",
-  "website.details.message": "I'm {{age}} years old and live in Geetbets, Belgium. This is in a close proximity of Leuven, Brussels and Hasselt. I'm passionate about full stack agile software development and artificial intelligence.",
-  "website.learn.more.about.my.vision": "My vision",
+  "home.data.quote": "Companies often have valuable data left unused. Together we can turn this data into value and leave the competition behind.",
+  "home.education.background": "Hey, I'm Dieter. I am currently working as a Software Consultant/Engineer. I have an academic Bachelor's degree in Computer Science (University of Hasselt) and a Master's degree in Computer Science specialising in Artificial Intelligence (KU Leuven).",
+  "home.mission": "Ever since I was little, I have been part of a world that is changing incredibly fast. A lot of things that appealed to the imagination twenty years ago, are a reality today. I want to be an active part of this changing world and make a contribution that appeals to the imagination. I want to create value for others.",
+  "home.age": "I am now {{age}} years old and have been actively involved in software development for many years now. During this period I actively gained project experience in a great variety of roles. Several times I had to start from zero, studying many hours after work to master the project assigned to me.",
+  "home.java.experience": "I have worked actively with Java over the years. I have worked on applications ranging from a large monolith to small microservices and know the challenges that both can bring. I am an Oracle Certified Professional. I have worked with SQL and NoSQL databases and understand the challenges both pose.",
+  "home.backend.craftsmanship": "While I could proclaim that I know everything there is to know about back end development, I certainly do not. Everything I have done so far is part of my journey in order to become a software craftsman. You will not hear me brag about my skills, I only seek pleasure in creating value.",
+  "home.python": " Lately I also use more and more Python. I think it's a great language, and I find it rather interesting how my Java background enables me to write very clean Python code.",
+  "home.frontend.experience": "I have also done my share of front-end development. In the beginning of my career, however, this was limited to some JavaScript, JQuery and CSS. Over the years I have expanded my knowledge about frontend development, responsive design and best practices.",
+  "home.angular": "I have applied this knowledge in large Angular projects and in both 2019 and 2020 I was an Angular Challenge Finalist. But, have I mastered frontend development? Oh certainly not. In this fast-changing frontend world you're never done. While my good knowledge of Angular and my love for Test-Driven Development convince me that I can bring knowledge to every team, I embrace every chance to learn more on this subject myself too.",
+  "home.deliver.software": "Today, it is not enough to know how to write software. It is very important that you can deliver as well. Without delivery, there is no value. The most successful projects are the projects which are done in close cooperation with the client. By working together, you can respond better to the needs of the market. I understand how important it is to always work on things that deliver a lot of value for the customer. That is why I have learned how to deploy software. In the past years I learned all about Docker, Jenkins and how to quickly deliver high quality applications (e.g. Angular, Python, Spring). I understand that it can be cheap to run an application on premise, but that it can become more complicated as it grows. As a result, I am currently improving my knowledge of Cloud Computing Services. It is my ambition to obtain the well known AWS Developer Certificate in the near future.",
+  "home.ai": "I strongly believe in the saying: \"You have to learn to walk before you can run\". In my first years as a software developer I learned how to build applications. This all part of my lifelong learning journey. I want to develop applications that are driven by data. From the data of companies, the domain knowledge and expertise of the professionals within an organisation you can obtain so much valuable information. It is my goal to turn data into value. I want to make people's daily lives easier, to eliminate the repetitive. I want to build upon the potential hidden in the organisation itself. I have a strong theoretic background in Artificial Intelligence. After my studies, I continued to deepen my knowledge in Artificial Intelligence and Machine/Deep Learning. I went to multiple AI conferences like RE-WORK London, dotAI Paris, World Summit AI Amsterdam and ML Conference Munich. I also followed online courses by Andrew Ng himself, and worked on data driven pet projects (e.g. face recognition, article topic prediction).",
+  "home.give.back": "As a Data/Software Engineer I would like to give something back to the community. I like to share my knowledge with others and love feedback. I am a technical writer for publications on Medium such as Better Programming, Towards Data Science and The Startup. I warmly invite you to contact me or Continuum Consulting NV, the company I currently work for, for data related assignments. We have the knowledge and manpower to bring these assignments to a higher level. I would also like conference organisers to contact me. My ambition is to translate my experience and knowledge into presentations with added value.",
+  "website.home": "About me",
+  "website.vision": "Craftsmanship",
   "website.change.language": "Change language",
-  "website.home": "Homepage",
-  "website.vision": "My vision",
   "website.cv": "CV",
   "website.projects": "Projects",
   "website.articles": "Articles",
@@ -56,7 +65,7 @@
   "cv.education2.date": "2014",
   "cv.education2.title": "Bachelor of Science: Computer Science, ICT",
   "cv.education2.employer": "University of Hasselt",
-  "cv.education2.place": "Diepenbeek, Belgique",
+  "cv.education2.place": "Diepenbeek, Belgium",
   "book.title": "Title",
   "book.authors": "Authors",
   "book.year.read": "Year read",
