--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -1,11 +1,20 @@
 {
   "current.language": "nl",
-  "website.introduction.message": "Ik ben Dieter Jordens. Dit is mijn online portfolio. Kijk gerust eens rond! Mijn website wordt uitgebreider in de toekomst, dus kom over een tijdje zeker eens terug.",
-  "website.details.message": "Ik ben {{age}} jaar oud en woon momenteel in Geetbets, België. Dit is in de nabijheid van Leuven, Brussel en Hasselt. Ik ben gepassioneerd door full-stack agile software ontwikkeling en artificiële intelligentie.",
-  "website.learn.more.about.my.vision": "Mijn visie",
+  "home.data.quote": "Bedrijven hebben vaak waardevolle gegevens die ze ongebruikt laten. Samen kunnen we deze gegevens in waarde omzetten en de concurrentie achter ons laten",
+  "home.education.background": "Hé, ik ben Dieter. Ik werk momenteel als Software Consultant/Engineer. Ik heb een academische Bachelor in Informatica (Universiteit Hasselt) en een Master Burgerlijk Ingenieur met als specialisatie Artificiële Intelligentie (KU Leuven).",
+  "home.mission": "Sinds ik klein was, maakte ik deel uit van een snel veranderende wereld. Veel dingen die twintig jaar geleden tot de verbeelding spraken, zijn vandaag de dag realiteit. Ik wil actief deel uitmaken van deze veranderende wereld en een bijdrage leveren die tot de verbeelding spreekt. Ik wil waarde creëren voor anderen.",
+  "home.age": "Ik ben nu {{age}} jaar oud en ben al vele jaren actief bezig met softwareontwikkeling. In deze periode heb ik actief projectervaring opgedaan in een grote verscheidenheid aan rollen. Meerdere malen ben ik vanaf nul moeten beginnen, waarvoor ik vrijwillig vele uren heb geïnvesteerd in mijn ontwikkeling, naast mijn werk als consultant.",
+  "home.java.experience": "Ik heb door de jaren heen actief met Java gewerkt. Ik heb gewerkt aan toepassingen die variëren van een grote monoliet tot kleine microservices en ik ken de uitdagingen die beide kunnen opleveren. Ik ben een Oracle Certified Professional. Ik heb met SQL en NoSQL databases gewerkt en begrijp de uitdagingen die beide vormen.",
+  "home.backend.craftsmanship": "Hoewel ik zou kunnen verkondigen dat ik alles weet wat er te weten valt over backend ontwikkeling, weet ik dat zeker niet. Alles wat ik tot nu toe heb gedaan maakt deel uit van mijn reis om een software vakman te worden. Je zult me niet horen opscheppen over mijn vaardigheden, ik zoek alleen maar plezier in het creëren van waarde.",
+  "home.python": "De laatste tijd gebruik ik ook steeds meer Python. Ik vind het een geweldige taal, en ik vind het interessant hoe mijn Java-achtergrond mij in staat stelt om zeer kwaliteitsvolle Python-code te schrijven.",
+  "home.frontend.experience": "Ik heb ook mijn deel van de front-end ontwikkeling gedaan. In het begin van mijn carrière was dit echter beperkt tot enkel JavaScript, JQuery en CSS. In de loop der jaren heb ik mijn kennis over front-end ontwikkeling, responsive design en best practices uitgebreid.",
+  "home.angular": "Ik heb deze kennis toegepast in grote Angular projecten en in zowel 2019 als 2020 was ik een Angular Challenge Finalist. Maar, ben ik nu een expert in frontend ontwikkeling? Oh, zeker niet. In deze snel veranderende frontend wereld ben je nooit klaar. Hoewel mijn goede kennis van Angular en mijn liefde voor Test-Driven Development me ervan overtuigen dat ik elk team iets kan bijbrengen, omarm ik zelf ook elke kans om meer over dit onderwerp te leren.",
+  "home.deliver.software": "Vandaag de dag is het niet genoeg om te weten hoe je software moet schrijven. Het is heel belangrijk dat je ook kunt opleveren. Zonder oplevering is er geen waarde. De meest succesvolle projecten zijn de projecten die in nauwe samenwerking met de klant worden uitgevoerd. Door samen te werken kun je beter inspelen op de behoeften van de markt. Ik begrijp hoe belangrijk het is om altijd te werken aan zaken die veel waarde opleveren voor de klant. Daarom heb ik geleerd hoe ik software moet deployen. In de afgelopen jaren heb ik alles geleerd over Docker, Jenkins en hoe je snel applicaties van hoge kwaliteit kunt opleveren (bijv. Angular, Python, Spring). Ik begrijp dat het goedkoop kan zijn om een applicatie on premise te draaien, maar dat het ingewikkelder kan worden naarmate het groeit. Daarom ben ik momenteel bezig mijn kennis van Cloud Computing Services te verbeteren. Het is mijn ambitie om in de nabije toekomst het bekende AWS Developer Certificate te behalen.",
+  "home.ai": "Ik geloof sterk in het gezegde: \"Je moet leren lopen voordat je kunt rennen\". In mijn eerste jaren als software ontwikkelaar heb ik geleerd hoe ik applicaties moet bouwen. Dit alles maakt deel uit van mijn levenslange leerproces. Ik wil applicaties ontwikkelen die gedreven worden door data. Uit de gegevens van bedrijven, de domeinkennis en expertise van de professionals binnen een organisatie kun je zoveel waardevolle informatie halen. Het is mijn doel om data om te zetten in waarde. Ik wil het dagelijks leven van mensen makkelijker maken, om het repetitieve te elimineren. Ik wil voortbouwen op het potentieel dat in de organisatie zelf schuilt. Ik heb een sterke theoretische achtergrond in Artificiële Intelligentie. Na mijn studies heb ik me verder verdiept in Artificiële Intelligentie en Machine/Deep Learning. Ik ben naar meerdere AI-conferenties geweest zoals RE-WORK London, dotAI Parijs, World Summit AI Amsterdam en ML Conference München. Ik volgde ook online cursussen van levende legende Andrew Ng, en werkte aan data driven hobby-projecten (bijv. gezichtsherkenning, artikelonderwerpvoorspelling).",
+  "home.give.back": "Als Data/Software Engineer wil ik graag iets teruggeven aan de community. Ik deel graag mijn kennis met anderen en hou van feedback. Ik ben een technisch schrijver voor publicaties over Medium zoals Better Programming, Towards Data Science en The Startup. Ik nodig je van harte uit om contact op te nemen met mij of met Continuum Consulting NV, het bedrijf waar ik momenteel voor werk, voor data gerelateerde opdrachten. Wij hebben de kennis en de mankracht om deze opdrachten naar een hoger niveau te brengen. Ik wil ook graag dat de organisatoren van conferenties contact met mij opnemen. Mijn ambitie is om mijn ervaring en kennis te vertalen naar presentaties met toegevoegde waarde",
+  "website.home": "Over mij",
+  "website.vision": "Vakmanschap",
   "website.change.language": "Verander taal",
-  "website.home": "Startpagina",
-  "website.vision": "Mijn visie",
   "website.cv": "Curriculum vitae",
   "website.projects": "Projecten",
   "website.articles": "Articles",
@@ -56,7 +65,7 @@
   "cv.education2.date": "2014",
   "cv.education2.title": "Bachelor in de Wetenschappen: Computerwetenschappen, ICT",
   "cv.education2.employer": "Universiteit Hasselt",
-  "cv.education2.place": "Leuven, België",
+  "cv.education2.place": "Hasselt, België",
   "book.title": "Titel",
   "book.authors": "Auteurs",
   "book.year.read": "Jaar gelezen",
