updates to website

--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -1,6 +1,6 @@
 {
   "current.language": "en",
-  "home.data.quote": "Companies often have valuable data left unused. Together we can turn this data into value and leave the competition behind.",
+  "home.data.quote": "Companies often have valuable data left unused. Together we can turn this data into value and leave the competition behind!",
   "home.education.background": "Hey, I'm Dieter. I am currently working as a Software Consultant/Engineer. I have an academic Bachelor's degree in Computer Science (University of Hasselt) and a Master's degree in Computer Science specialising in Artificial Intelligence (KU Leuven).",
   "home.mission": "Ever since I was little, I have been part of a world that is changing incredibly fast. A lot of things that appealed to the imagination twenty years ago, are a reality today. I want to be an active part of this changing world and make a contribution that appeals to the imagination. I want to create value for others.",
   "home.age": "I am now {{age}} years old and have been actively involved in software development for many years now. During this period I actively gained project experience in a great variety of roles. Several times I had to start from zero, studying many hours after work to master the project assigned to me.",
